# UMA

./: .gitignore  CMakeLists.txt  QLearningFULL.py  README.md  environment.cp39-win_amd64.pyd  example.py
QLKnowledge/: bestAgent.json
demos/: forAIPlayer.py  forHumanPlayer.py
include/: critic.h  engine.h  environment.h  track.h
scripts/: QL.py  QLearning.py  example.py  track.py  track_generation.py
src/: critic.cpp  engine.cpp  engine_binding.cpp  environment.cpp  environment_binding.cpp  track.cpp
